oauthFilter修改添加要过滤的静态资源

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,7 +22,9 @@ spring:
           predicates:
             - Path=/app,/app/**
           filters:
-            - OAuth=/app
+            - name: OAuth
+              args:
+                staticPaths: /app/static/**,/app/*.js,/app/*.css
         - id: test-api
           uri: http://pm.lanxinpay.com
           predicates:
